# etbot

./: .gitignore  README.md  etbot3.py  etbot4.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml
src/etbot/: config.json  main.py  utils.py
src/etbot/cogs/: admin.py  meme_voting.py  moderation.py  senate.py  support.py
src/etbot/vars/: channels.py  emojis.py  index.py  messages.py  roles.py  warnings.py
