[metadata]
name = etbot
version = 1.5.3
description = A custom bot for the Extended Timeline Discord Server
author = BrokenButler
author_email = castellobutler@gmail.com
license = GPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    disnake>=2.3
python_requires = >= 3.10
zip_safe = no

[options.packages.find]
where = src
include = etbot*
exclude = test

[options.entry_points]
console_scripts =
    run = etbot:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
etbot = py.typed

[flake8]
max-line-length = 160
